# MPI-FEM

./: .gitignore  CMakeLists.txt  README.md  plots.asv  plots.m
examples/: main.cpp  parallel_poisson.cpp  test.cpp  tests.cpp
include/: Assemble.hpp  CG.hpp  Lagrange.hpp  assemble.hpp  basis_functions.hpp  basis_functions.tpp  cg.hpp  export.hpp  fem.hpp  fem.tpp  finite_element.hpp  gnuplot.hpp  h1.hpp  lagrange.hpp  mesh.hpp  mesh.tpp  norm.hpp  poisson.hpp  problem.hpp  problem.tpp  quadrature.hpp
include/fe/: basis_functions.hpp  basis_functions.tpp  fem.hpp  fem.tpp
include/mesh/: mesh.hpp
include/quadrature/: quadrature.hpp
include/solve/: cg.hpp
include/utilities/: data_structures.hpp  export.hpp  mpi_util.hpp  norm.hpp  utils.hpp
notebooks/: data.ipynb
project/src/: main.cpp
project/src/mesh/: element.hpp  mesh.hpp
src/: CMakeLists.txt  Lagrange.cpp  action.cpp  assemble.tpp  basis_functions.tpp  h1.cpp  lagrange.cpp  main.cpp  mesh.cpp  mpi_util.cpp  poisson.cpp  problem.tpp  quadrature.cpp  tests.cpp
src/fem/: CG.hpp  action.cpp
src/mesh/: element.hpp  mesh.cpp  mesh.hpp  vertex.hpp
src/visualization/: gnuplot.hpp
